# gtkmm-general

./: .gitignore  configure.ac
glade/: glad_ui01.glade  simple_ui.glade
src/: Makefile.am  main.cc  myform.cc  myform.h
